--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,37 @@
 }
 
 body {
+  background-color: rgb(161, 100, 223);
   font-family: Roboto, sans-serif;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  text-align: center;
   min-height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.btn {
+  background-color: rebeccapurple;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  margin: 1rem;
+  padding: 1.5rem 3rem;
+  font-family: inherit;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+.btn:focus {
+  outline: none;
+}
+.btn:active {
+  scale: 0.98;
 }
 
 /*# sourceMappingURL=style.css.map */
